--- a/css/styles.css
+++ b/css/styles.css
@@ -212,11 +212,38 @@ ul {
 }
 
 .advantages-item {
-  width: 270px;
+  max-width: 270px;
+}
+
+.advantages-item::before {
+  content: '';
+  display: block;
+  max-width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: var(--team-background-color);
+  border-radius: 4px;
+}
+.icon-detail::before {
+  background-image: url(../images/antenna1.svg);
+}
+
+.icon-time::before {
+  background-image: url(../images/clock\ 1.svg);
+}
+
+.icon-planining::before {
+  background-image: url(../images/diagram\ 1.svg);
+}
+
+.icon-technologies::before {
+  background-image: url(../images/astronaut\ 1.svg);
 }
 
 .advantages-item-title {
-  margin-bottom: 10px;
+  margin-bottom: 12px;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 700;
@@ -226,7 +253,7 @@ ul {
 .advantages-item-description {
   font-weight: 400;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.8;
   letter-spacing: 0.03em;
 }
 
